--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-image: url("/static/img/bg2.PNG");
+    background-image: url("/static/img/bg.PNG");
     height: 450px;
     overflow: hidden;
 }
