--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>To Do App</title>
+	<title>Adhithyakrishna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{{!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> --}}
     <script type='text/javascript' src='/static/js/jquery.min.js'></script>
