--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<title>Adhithyakrishna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="static/img/favicon.ico" type="image/x-icon" />
 	{{!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> --}}
     <script type='text/javascript' src='/static/js/jquery.min.js'></script>
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
