--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-image: url("/static/img/bg.png");
+    background-image: url("/static/img/bg.jpg");
     height: 450px;
     overflow: hidden;
 }
