--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -107,34 +107,34 @@
          <div class="skillHeaderHolder">
             <div class="skillContainer">
                <div class="skillLevel animateit leftContent">
-                  <div class="skillbar clearfix " data-percent="80%">
+                  <div class="html skillbar clearfix " data-percent="80%">
                      <div class="skillbar-title"><span>Html 5</span></div>
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent">80%</div>
                   </div>
-                  <div class="skillbar clearfix " data-percent="80%">
+                  <div class="css skillbar clearfix " data-percent="80%">
                      <div class="skillbar-title"><span>Css 3</span></div>
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent">80%</div>
                   </div>
-                  <div class="skillbar clearfix " data-percent="85%">
+                  <div class="query skillbar clearfix " data-percent="85%">
                      <div class="skillbar-title"><span>JQuery</span></div>
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent">85%</div>
                   </div>
                </div>
-               <div class="skillLevel animateit rightContent">
+               <div class="handle skillLevel animateit rightContent">
                   <div class="skillbar clearfix " data-percent="80%">
                      <div class="skillbar-title"><span>Handlebars templating engine</span></div>
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent">80%</div>
                   </div>
-                  <div class="skillbar clearfix " data-percent="50%">
+                  <div class="node skillbar clearfix " data-percent="50%">
                      <div class="skillbar-title"><span>Node JS</span></div>
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent">50%</div>
                   </div>
-                  <div class="skillbar clearfix " data-percent="40%">
+                  <div class="react skillbar clearfix " data-percent="40%">
                      <div class="skillbar-title"><span>React JS</span></div>
                      <div class="skillbar-bar"></div>
                      <div class="skill-bar-percent">40%</div>
