--- a/public/css/style.css
+++ b/public/css/style.css
@@ -512,6 +512,10 @@ ul {
 }
 
 /*mobile specific*/
+.ismobile #eduSpritImg {
+   border: 3px solid rgba(0, 0, 0, 0.64);  
+}
+
 .ismobile .html .skillbar-bar , .ismobile .css .skillbar-bar,
 .ismobile .handle .skillbar-bar {
     width: 80%;
