style.css modified to center content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -939,7 +939,7 @@ a {
 .project {
     width: 90%;
     height: 440px;
-    padding: 10px 10px;
+    padding: 10% 7% 10% 7%;
 }
 .projectImg {
     padding: 0px 20px 10px 20px;
