--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,7 +209,8 @@ body {
 }
 
 h2.educationHeader {
-  min-height: 25px;  
+  min-height: 25px;
+  line-height: 1.2; 
 }
 .holderEducationExperienceInfo {
     padding: 0px 0px 50px 0px;
@@ -885,7 +886,7 @@ a {
         padding: 20px 5% 20px 5%;
  }
  .educationHeader:after {
-    top : 25px;
+    top : 27px;
  }
  .educationExperienceHolder {
     padding : 0 5% 0 12%;
