heading for technologies changed

--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -145,7 +145,7 @@
       </div>
       <div class="ancillaryHeaderHolder">
          <div class="ancillaryHeader">
-            <h1>Technologies I have worked in</h1>
+            <h1>Technologies I am familiar with</h1>
          </div>
          <div class="ancillarySkills">
             <div class="technology">
