--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -4,6 +4,22 @@
          <div class="profileImage"></div>
          <div class="nameContainer">Adhithyakrishna</div>
          <div class="aboutMe"> Front-end developer, Writer and a Movie-Buff</div>
+         <div class="bannerSocialMedias">
+            <div class="bannerSocialHolder">
+            <div id="github_left" class="bannerSocialImgholder">
+               <div class="githubberbanner githubsocialImg"></div>
+               <div class="profileUrlHolder">
+                  <a class="githubUrl" href="//github.com/Adhithyakrishna" target="_blank">Git hub</a>
+               </div>
+            </div>
+            <div id="github_right" class="bannerSocialImgholder">
+               <div class="githubberbanner resumesocialImg"></div>
+               <div class="profileUrlHolder">
+                  <a class="githubUrl" href="/static/img/Adhithya_Resume.pdf" target="_blank">Resume</a>
+               </div>
+            </div>
+            </div>
+         </div>
       </div>
    </div>
    <div class="holderAboutInfo">
@@ -12,7 +28,7 @@
             <div class="about-title">
                <h1>About me</h1>
             </div>
-            <p class="description">Hi, I'm Adhithya Krishna, I am a front-end developer with an infinite zeal to design and build amazing websites. I put my heart and soul into every work I do and consider each aspect of my work a piece of art. 
+            <p class="description">Hi, I'm Adhithya Krishna, I am a software engineer with an infinite zeal to design and build amazing web apps. I put my heart and soul into every work I do and consider each aspect of my work a piece of art. 
                I am a writer by passion and my long term prospect is to revolutionise the art of story telling through digital media. 
             </p>
             {{!--          
@@ -42,18 +58,10 @@
             <div class="educationContentHolder">
                <div class="educationContent">
                   <h2 class="educationHeader">
-                     SBKV Matriculation School 
+                     State University of New York at Buffalo  
                   </h2>
-                  <span id="yearHolder">1999 - 2010</span>
-                  <p> Secured 88.2% in 10th grade.
-                  </p>
-               </div>
-               <div class="educationContent">
-                  <h2 class="educationHeader">
-                     SBKV Matriculation School 
-                  </h2>
-                  <span id="yearHolder">2010 - 2012</span>
-                  <p> Secured 82.4% in 12th grade
+                  <span id="yearHolder"> June 2019 - Jan 2021</span>
+                  <p> Secured 3.3 CGPA until the half of first semester
                   </p>
                </div>
                <div class="educationContent">
@@ -62,7 +70,15 @@
                   </h2>
                   <span id="yearHolder">2012 - 2016</span>
                   <p> Studied Bachelor of Engineering in Computer Science,
-                     Secured 79.9%
+                     Secured 7.52 CGPA
+                  </p>
+               </div>
+               <div class="educationContent">
+                  <h2 class="educationHeader">
+                     SBKV Matriculation School 
+                  </h2>
+                  <span id="yearHolder">2010 - 2012</span>
+                  <p> Secured 82.4% in 12th grade
                   </p>
                </div>
                <div class="triangle"></div>
@@ -83,15 +99,23 @@
                   </h2>
                   <span id="yearHolder">2016 (January - June)</span>
                   <p> 
-                     Worked as an intern in front-end development.
+                     Worked as a student intern in front-end development.
                   </p>
                </div>
                <div class="educationContent">
                   <h2 class="educationHeader company">
                   </h2>
-                  <span id="yearHolder">2016 (June) - Present</span>
+                  <span id="yearHolder">2016 (June) - 2017 (November)</span>
                   <p> 
-                     Working as a software developer trainee.
+                     Worked as a front-end developer.
+                  </p>
+               </div>
+               <div class="educationContent">
+                  <h2 class="educationHeader company">
+                  </h2>
+                  <span id="yearHolder">2017 (December) - 2019 (June)</span>
+                  <p> 
+                     Worked as a back-end developer.
                   </p>
                </div>
                <div class="triangle"></div>
@@ -107,6 +131,11 @@
          <div class="skillHeaderHolder">
             <div class="skillContainer">
                <div class="skillLevel animateit leftContent">
+                  <div class="html skillbar clearfix " data-percent="90%">
+                     <div class="skillbar-title"><span>Java</span></div>
+                     <div class="skillbar-bar"></div>
+                     <div class="skill-bar-percent">90%</div>
+                  </div>
                   <div class="html skillbar clearfix " data-percent="80%">
                      <div class="skillbar-title"><span>Html 5</span></div>
                      <div class="skillbar-bar"></div>
@@ -124,6 +153,11 @@
                   </div>
                </div>
                <div class="handle skillLevel animateit rightContent">
+                  <div class="html skillbar clearfix " data-percent="80%">
+                     <div class="skillbar-title"><span>Python</span></div>
+                     <div class="skillbar-bar"></div>
+                     <div class="skill-bar-percent">80%</div>
+                  </div>
                   <div class="skillbar clearfix " data-percent="80%">
                      <div class="skillbar-title"><span>Handlebars templating engine</span></div>
                      <div class="skillbar-bar"></div>
@@ -260,7 +294,7 @@
             </div>
             <div class="projectDescriptionHolder">
                <div class="projectDescription">
-                  A mobile friendly photography website built on top of Flickr api services. It provides options to share photos on social media, add notes and shows geo-location of the photo. 
+                  A responsive mobile friendly photography website built on top of Flickr api services. It provides options to share photos on social media, add notes and shows geo-location of the photo. 
                </div>
                <div class="buildDescription">
                   <div class="buildHeader">Built With</div>
