Committing changes for the newly created tagline and corresponding css

--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -3,7 +3,7 @@
       <div class="profileElements">
          <div class="profileImage"></div>
          <div class="nameContainer">Adhithyakrishna</div>
-         <div class="aboutMe"> Front-end developer, Writer and a Movie-Buff</div>
+         <div class="aboutMe"> Software developer, Writer and a Movie-Buff</div>
          <div class="bannerSocialMedias">
             <div class="bannerSocialHolder">
             <div id="github_left" class="bannerSocialImgholder">
