--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -126,7 +126,7 @@
    <div class="skillsInfo">
       <div class="holderSkillInfoContainer">
          <div class="skillHeader">
-            <h1>Front-end technologies</h1>
+            <h1>Frameworks and programming languages</h1>
          </div>
          <div class="skillHeaderHolder">
             <div class="skillContainer">
