commiting fileformat change

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ body {
     height: 144px;
     background-position: -0px -0px;
     background-size: 167px auto;
-    background-image: url(/static/img/ninjaImg.jpg);
+    background-image: url(/static/img/ninjaImg.png);
     display: inline-block;
     background-repeat: no-repeat;
     border-radius: 90px;
